[package]
name = "wasm-animation-interaction"
version = "0.1.0"
authors = ["____marcell <0000marcell@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'CssStyleDeclaration',
  'MouseEvent',
  'Node',
  'Window',
]
